# audio-cleaner

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEBUG_STEPS.md  DESIGN.md  PHASE1_COMPLETE.md  PHASE1_READINESS.md  PHASE2_PLAN.md  QUICKSTART_TESTING.md  README.md  TESTING_STEP2.md  TEST_COMMANDS.md  index.html  package-lock.json  package.json  vite.config.ts
models/: README.md
src/: App.tsx  TestPipeline.tsx  TestStep2.tsx  styles.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: media.rs  mod.rs  pipeline.rs
src-tauri/src/enhancement/: chunking.rs  deepfilternet.rs  deepfilternet_cli.rs  mod.rs
src-tauri/src/ffmpeg/: extract.rs  loudness.rs  mod.rs  probe.rs  remux.rs
src-tauri/src/models/: media.rs  mod.rs  processing.rs
src-tauri/src/utils/: audio_io.rs  mod.rs
