[package]
name = "audio-cleaner"
version = "0.1.0"
description = "Desktop-first audio enhancement tool for YouTube creators"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
ort = "2.0.0-rc.12"      # ONNX Runtime for ML inference
ndarray = "0.17"         # N-dimensional arrays for tensor operations (must match ort's version)
hound = "3.5"            # WAV file I/O
rubato = "0.15"          # Audio resampling
uuid = { version = "1.0", features = ["v4"] }  # For temporary file names
# dasp will be used later for filters if needed

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
